--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.18.1",
     "path": "^0.12.7",
     "pug": "^2.0.0-beta11",
+    "socket.io": "^1.7.3",
     "twit": "^2.2.5"
   }
 }
